# ChromoFold3D

./: DOCUMENTATION.md  README.md  app.py  pyproject.toml
data/: labels.csv
data/ccd_cache/: 4M9.json  5SQ.json  B2H.json  BJF.json  CCY.json  CFY.json  CH6.json  CH7.json  CR2.json  CR7.json  CR8.json  CRF.json  CRO.json  CRQ.json  CSH.json  DYG.json  GYC.json  GYS.json  NRP.json  NRQ.json  NYG.json  OFM.json  OIM.json  PIA.json  SWG.json  WCR.json
docs/: DOCUMENTATION.md
fp_gnn/: chromophore_graph.py  dataset.py  lit_module.py  pdb_io.py  protein_graph.py
logs/kfold5/fold0/version_0/: metrics.csv  test_predictions.csv
logs/kfold5/fold1/version_0/: metrics.csv  test_predictions.csv
logs/kfold5/fold2/version_0/: metrics.csv  test_predictions.csv
logs/kfold5/fold3/version_0/: metrics.csv  test_predictions.csv
logs/kfold5/fold4/version_0/: metrics.csv  test_predictions.csv
scripts/: analyze_sweep.py  process.py  train.py
src/fp_gnn/: model.py
