[project]
name = "fp_gnn"
version = "0.1.0"
description = "Project for AI for Chemistry course at EPFL"
readme = "README.md"
authors = [
    { name = "Amina Menhour", email = "amina.menhour@epfl.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=2.4.3",
    "ogb>=1.3.6",
    "pandas>=3.0.2",
    "pytorch-lightning>=2.6.1",
    "torchmetrics>=1.3.0",
    "rdkit>=2026.3.1",
    "requests>=2.28.1",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "streamlit>=1.35.0",
    "tensorboard>=2.18.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.11.0"]
gpu = ["torch>=2.11.0"]

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "gpu" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["uv_build>=0.10.9"]
build-backend = "uv_build"